# szponti

./: .gitignore  AgentOrchestrator.py  README.md  config.py  env.example  pyproject.toml  requirements.txt  run_web.py  task_config.yaml  task_loader.py  tools.py  workflow_models.py
tests/: test_api.py  test_config_overrides.py  test_db_context_toggle.py  test_profile_validator.py  test_run_store.py  test_run_workflow.py  test_status_parsing.py  test_task_loader.py  test_workflow_manager.py
web/: README.md
web/backend/: app.py  path_security.py  schemas.py
web/backend/routes/: config.py  workflows.py
web/backend/services/: profile_validator.py  workflow_manager.py
web/backend/storage/: run_store.py
web/frontend/: index.html  package-lock.json  package.json  vite.config.ts
web/frontend/src/: App.tsx  main.tsx  styles.css  types.ts
web/frontend/src/api/: client.ts
web/frontend/src/components/: ConfigPanel.tsx  FailureBanner.tsx  RunLog.test.tsx  RunLog.tsx  StageCard.tsx  StageSelector.test.tsx  StageSelector.tsx  WorkflowChrome.tsx  WorkflowTimeline.test.tsx  WorkflowTimeline.tsx
web/frontend/src/hooks/: useDashboardState.ts
web/frontend/src/lib/: configStorage.test.ts  configStorage.ts
