[project]
name = "szponti"
version = "0.1.0"
description = "Local multi-agent orchestrator with web UI"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "cursor-sdk",
    "pyyaml>=6.0",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "sse-starlette>=2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "httpx>=0.27",
    "ruff>=0.8",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
py-modules = [
    "AgentOrchestrator",
    "config",
    "tools",
    "task_loader",
    "workflow_models",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["web*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 88
target-version = "py311"
